# meemcraft

./: CMakeLists.txt  README.md
resources/: level1.txt  level10.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
resources/shaders/: entity.shader  entity_tinted.shader  noise_map.shader  particle.shader  text.shader
src/: ball.cpp  ball.h  block.cpp  block.h  block_data.cpp  block_data.h  brick.cpp  brick.h  camera.cpp  camera.h  entity.cpp  entity.h  game.cpp  game.h  laser.cpp  laser.h  model.h  particle.cpp  particle.h  particle_manager.cpp  particle_manager.h  player.cpp  player.h  powerup.h  raw_model.cpp  raw_model.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader_s.cpp  text_renderer.cpp  texture.cpp  texture.h  util.h
src/blocks/: block.cpp  block.h  block_data.cpp  block_data.h  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  shared.h
src/map_generation/: map_generator.cpp  map_generator.h
src/platform/: controls.cpp  controls.h  display.cpp  main.cpp  openglDebug.cpp
src/rendering/: renderer.cpp  renderer.h  rendering_manager.cpp  rendering_manager.h  shader.cpp  shader.h  text_renderer.h  texture.cpp  texture.h
src/tests/: tests.h
